@@ -6,7 +6,8 @@ from .amp import AMPIE
 from .common import InfoExtractor
 
 
-class FoxNewsIE(AMPIE):
+class FoxNewsVideoIE(AMPIE):
+    IE_NAME = 'foxnews:video'
     IE_DESC = 'Fox News and Fox Business Video'
     _VALID_URL = r'https?://(?P<host>video\.(?:insider\.)?fox(?:news|business)\.com)/v/(?:video-embed\.html\?video_id=)?(?P<id>\d+)'
     _TESTS = [
@@ -66,6 +67,35 @@ class FoxNewsIE(AMPIE):
         return info
 
 
+class FoxNewsIE(InfoExtractor):
+    _VALID_URL = r'https?://(?:www\.)?foxnews\.com/(?!v)([^/]+/)+(?P<id>[a-z-]+)'
+    IE_NAME = 'foxnews'
+
+    _TEST = {
+        'url': 'http://www.foxnews.com/politics/2016/09/08/buzz-about-bud-clinton-camp-denies-claims-wore-earpiece-at-forum.html',
+        'md5': '62aa5a781b308fdee212ebb6f33ae7ef',
+        'info_dict': {
+            'id': '5116295019001',
+            'ext': 'mp4',
+            'title': 'Trump and Clinton asked to defend positions on Iraq War',
+            'description': 'Veterans react on \'The Kelly File\'',
+            'timestamp': 1473299755,
+            'upload_date': '20160908',
+        },
+    }
+
+    def _real_extract(self, url):
+        display_id = self._match_id(url)
+        webpage = self._download_webpage(url, display_id)
+
+        video_id = self._html_search_regex(
+            r'data-video-id=([\'"])(?P<id>[^\'"]+)\1',
+            webpage, 'video ID', group='id')
+        return self.url_result(
+            'http://video.foxnews.com/v/' + video_id,
+            FoxNewsVideoIE.ie_key())
+
+
 class FoxNewsInsiderIE(InfoExtractor):
     _VALID_URL = r'https?://insider\.foxnews\.com/([^/]+/)+(?P<id>[a-z-]+)'
     IE_NAME = 'foxnews:insider'
@@ -83,7 +113,11 @@ class FoxNewsInsiderIE(InfoExtractor):
             'upload_date': '20160825',
             'thumbnail': 're:^https?://.*\.jpg$',
         },
-        'add_ie': [FoxNewsIE.ie_key()],
+        'params': {
+            # m3u8 download
+            'skip_download': True,
+        },
+        'add_ie': [FoxNewsVideoIE.ie_key()],
     }
 
     def _real_extract(self, url):
@@ -98,7 +132,7 @@ class FoxNewsInsiderIE(InfoExtractor):
 
         return {
             '_type': 'url_transparent',
-            'ie_key': FoxNewsIE.ie_key(),
+            'ie_key': FoxNewsVideoIE.ie_key(),
             'url': embed_url,
             'display_id': display_id,
             'title': title,
